syntax = "proto3";

service TrendStoryService {
    rpc GetStory (TrendStoryRequest) returns (TrendStoryResponse);
}

message TrendStoryRequest {
    string style = 1;
    string theme = 2;
    string category = 3;
}

message TrendStoryResponse {
    string response = 1;
}

